chapter 4 succeeded tests

--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <a href="/rango/">Index</a><br />
-            <img src="{% static 'images/gregiry.jpeg' %}" alt="Gregory FNAF" />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
             <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
         </div>
     </body>
