--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -14,7 +14,7 @@
         </div>
         <div>
             <a href="/rango/about/">About</a><br />
-            <img src="{% static 'images/gregiry.jpeg' %}" alt="Gregory FNAF" />
+            <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
     </body>
 </html>
