--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -12,6 +12,7 @@
             hey there partner! <br />
             <strong>{{ boldmessage }}</strong><br />
         </div>
+        <h2>Most Liked Categories</h2>
         <div>
         {% if categories %}
             <ul>
@@ -21,6 +22,18 @@
             </ul>
         {% else %}
             <strong>There are no categories present.</strong>
+        {% endif %}
+        </div>
+        <h2>Most Liked Pages</h2>
+        <div>
+        {% if pages %}
+            <ul>
+            {% for page in pages %}
+                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+            </ul>
+        {% else %}
+            <strong>There are no pages present.</strong>
         {% endif %}
         </div>
         <div>
