--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -22,5 +22,8 @@
             The specified category does not exist.
         {% endif %}
         </div>
+        <div>
+            <a href="/rango/">Index</a><br />
+        </div>
     </body>
 </html>
