--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -24,7 +24,7 @@
             <strong>There are no categories present.</strong>
         {% endif %}
         </div>
-        <h2>Most Liked Pages</h2>
+        <h2>Most Viewed Pages</h2>
         <div>
         {% if pages %}
             <ul>
