--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -17,7 +17,7 @@
         {% if categories %}
             <ul>
             {% for category in categories %}
-                <li><a href="/rango/category/{{ category.slug }}/">{{ category.name }}</a></li>
+                <li><a href="{% url 'rango:show_category' category_slug %}">{{ category.name }}</a></li>
             {% endfor %}
             </ul>
         {% else %}
@@ -38,7 +38,7 @@
         </div>
         <div>
             <a href="/rango/add_category/">Add a New Category</a><br />
-            <a href="/rango/about/">About</a><br />
+            <a href="{% url 'rango:about' %}">About</a><br />
             <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         </div>
     </body>
