--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,30 +1,28 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
+{% block title_block %}
+    {% if category %}
+        {{ category.name }}
+    {% else %}
+        Unknown Category
+    {% endif %}
+{% endblock %}
 
-    <body>
-        <div>
-        {% if category %}
-            <h1>{{ category.name }}</h1>
-            {% if pages %}
-            <ul>
-                {% for page in pages %}
-                <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-                {% endfor %}
-            </ul>
-            {% else %}
-            <strong>No pages currently in category.</strong>
-            {% endif %}
-            <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
+{% block body_block %}
+    {% if category %}
+        <h1>{{ category.name }}</h1>
+        {% if pages %}
+        <ul>
+            {% for page in pages %}
+            <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
         {% else %}
-            The specified category does not exist.
+        <strong>No pages currently in category.</strong>
         {% endif %}
-        </div>
-        <div>
-            <a href="/rango/">Index</a><br />
-        </div>
-    </body>
-</html>
+        <a href="/rango/category/{{ category.slug }}/add_page/">Add Page</a> <br/>
+    {% else %}
+        The specified category does not exist.
+    {% endif %}
+{% endblock %}
