--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -15,4 +15,6 @@
         <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
         <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat." />
     </div>
+    <div>
+        Visits: {{ visits }}
 {% endblock %}
